manifast/ingress demo/depolyment/ngnix.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
          - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: ngnix-svc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
