manifast/ingress demo/depolyment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /nginx(/|$)(.*)
            backend:
              service:
                name: ngnix-svc
                port: 
                  number: 80
          - pathType: ImplementationSpecific
            path: /httpd(/|$)(.*)
            backend:
              service:
                name: httpd-svc
                port: 
                  number: 80
